# pirate

./: Makefile.am  Makefile.in  cmakereference.cpp  compress42.c  cpirate.cpp  ftplib.c  ftplib.h  makereference.csh  piralib.cpp  piralib.h  pirancslib.cpp  pirancslib.h  pirate-lib.cpp  pirate-lib.h  pirate-ncsaver.cpp  pirate-ncsaver.h  pirate-ncsfind.cpp  pirate-ncsfind.h  simplex-lib.cpp  simulate-lib.cpp
